--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,30 +1,19 @@
 pipeline {
     agent any
-
-    environment {
-        APP_REPO = 'git@github.com:Sijil-George/simple_react_app.git'
-        BRANCH = 'main'
-    }
-
     stages {
-        stage('Checkout') {
-            steps {
-                checkout scm
+        stage('hello') {
+            steps{
+                echo "hello world"
             }
         }
 
         stage('Detect Changes') {
-            steps {
-                script {
-                    def changeLogSets = currentBuild.changeSets
-                    def backendChanged = false
-                    def frontendChanged = false
-                    env.BACKEND_CHANGED = backendChanged.toString()
-                    env.FRONTEND_CHANGED = frontendChanged.toString()
-                }
+            when{
+                changeset "backend/*"
+            }
+            steps{
+                echo "changed backend"
             }
         }
-
- 
     }
 }
