--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,18 +1,11 @@
+Jenkinsfile (Declarative Pipeline)
+/* Requires the Docker Pipeline plugin */
 pipeline {
-    agent any
+    agent { docker { image 'maven:3.9.9-eclipse-temurin-21-alpine' } }
     stages {
-        stage('hello') {
-            steps{
-                echo "hello world"
-            }
-        }
-
-        stage('Detect Changes') {
-            when{
-                changeset "backend/*"
-            }
-            steps{
-                echo "changed backend"
+        stage('build') {
+            steps {
+                sh 'mvn --version'
             }
         }
     }
